# blinko

./: .gitignore  README.md  README.zh-CN.md  package.json
.claude/: settings.local.json
.github/workflows/: app-release.yml  build-publish-release.yml  windows-test-release.yml
app/: index.html  package.json  vite.config.ts
app/public/: manifest.json
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
app/src/hooks/: useDragCard.tsx  useInitialHotkeySetup.ts  useQuickaiHotkey.ts  useQuicknoteHotkey.ts
app/src/lib/: hooks.ts  tauriHelper.ts
app/src/pages/: hub.tsx  index.tsx  quicknote.tsx  resources.tsx  settings.tsx  signin.tsx
app/src/store/: aiSettingStore.tsx  aiStore.tsx  blinkoStore.tsx  user.ts
app/src/styles/: github-markdown.css  globals.css  vditor.css
prisma/: schema.prisma
server/: index.ts  package.json
server/aiServer/: aiModelFactory.ts  index.ts
server/aiServer/providers/: AudioProvider.ts  EmbeddingProvider.ts  LLMProvider.ts  azureOpenAI.ts  index.ts  ollama.ts  openAI.ts  openRouter.ts  voyage.ts
server/aiServer/tools/: createBlinko.ts  createComment.ts  deleteBlinko.ts  searchBlinko.ts  updateBlinko.ts  (+2 more)
server/lib/: files.ts  helper.ts  proxy.ts
server/routerExpress/: mcp.ts
server/routerTrpc/: ai.ts  comment.ts  config.ts  note.ts  plugin.ts  task.ts  user.ts
shared/: package.json
shared/lib/: prismaZodType.ts  types.ts
whisper_mic_example/: Cargo.toml  README.md
whisper_mic_example/src/: main.rs
(+74 files in other folders)
