[package]
name = "whisper_mic_example"
version = "0.1.0"
edition = "2021"

[dependencies]
whisper-rs = "0.15.1"
cpal = "0.16.0"
crossbeam-channel = "0.5"
parking_lot = "0.12"
enigo = "0.3"
windows = { version = "0.62.1", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
cuda = ["whisper-rs/cuda"]
